--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -13,7 +13,7 @@
     <!-- Loading Quiz Modal -->
     <ng-include src="'/templates/quiz.modal.html'"></ng-include>
     <div id="quiz-progress" ng-show="inProgress">
-        <div id="progress-bar" class="header-bar bga-gray">
+        <div id="progress-bar" class="header-bar">
         <div id="progress-bar-bg" class="bga-dark centered">
           <div id="progress-bar-thumb" class="bga-correct"></div>
         </div>
