--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -95,7 +95,7 @@
           <div class="connected">
             <div class="connected-wire"></div><div></div>
           </div>
-          <div class="word-details option bga-gray">
+          <div class="word-details bga-gray">
             {{ option }}
           </div>
         </li>
@@ -134,5 +134,7 @@
         </li>
       </ul>
     </div>
+    <!-- Main Nav -->
+    <ng-include src="'/templates/mainnav.html'"></ng-include>
   </section>
 </main>
