--- a/app/templates/words.addword.html
+++ b/app/templates/words.addword.html
@@ -40,7 +40,7 @@
     </div>
   </div>
   <!-- Search Results -->
-  <div id="search-results-box">
+  <div id="search-results-box" class="list-box">
     <ul class="word-list">
       <!-- List Item: Definition -->
       <li class="word-item"
