--- a/app/templates/words.html
+++ b/app/templates/words.html
@@ -32,5 +32,7 @@
       onload="words.attachBtnOpenAddWordResponsiveness()"></ng-include>
     <!-- Add Word View -->
     <ng-include src="'/templates/words.addword.html'"></ng-include>
+    <!-- Main Nav -->
+    <ng-include src="'/templates/mainnav.html'"><ng-include>
   </section>
 </main>
