--- a/app/templates/words.userwords.html
+++ b/app/templates/words.userwords.html
@@ -44,7 +44,7 @@
     </div>
   </div>
   <!-- User Words (may be limited by search result) -->
-  <div id="user-words-box">
+  <div id="user-words-box" class="list-box">
     <ul class="word-list">
       <!-- List Item: User Word -->
       <li class="word-item bga-gray" ng-repeat="word in words.userWords | filter: words.searchUserWord | orderBy: words.sortByOrder():words.sortByReversed() as filteredSearch">
