--- a/app/templates/words.html
+++ b/app/templates/words.html
@@ -6,12 +6,10 @@
 -->
 
 <main id="viewport">
-  <!-- App Navigation -->
-  <!-- <ng-include src="'/templates/appnav.html'"></ng-include> -->
   <!-- Words Content -->
   <section id="words-content" class="view-content">
     <!-- Button: Navigation -->
-    <div id="responsive-screen-overlay">
+    <!-- <div id="responsive-screen-overlay"> -->
       <!-- Button: Open Add Word View -->
       <div id="btn-open-add-word" class="btn-nav btn bg-theme"
         ng-click="words.btnOpenAddWord()">
@@ -22,7 +20,7 @@
         ng-click="words.btnReturnToWords()">
         <div class="ion-arrow-right-c btn-text centered"></div>
       </div>
-    </div>
+    <!-- </div> -->
     <!-- Action Notification -->
     <div id="action-notification" class="bga-slate">
       {{ words.txtActionNotification }}
